// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auto-complete-input renders correctly (disabled) 1`] = `
<div
  className="css-18fst3t"
>
  <div
    className="css-1ezojgn"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="css-oqraj9"
    >
      <input
        autoComplete="off"
        className="css-pkbj54"
        defaultValue=""
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="results-list css-110siln"
    style={{}}
  />
</div>
`;

exports[`auto-complete-input renders correctly (showCopyToClipboard) 1`] = `
<div
  className="css-18fst3t"
>
  <div
    className="css-1ezojgn"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="css-oqraj9"
    >
      <input
        autoComplete="off"
        className="css-pkbj54"
        defaultValue=""
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <div
        className="css-0"
        id="tooltip_42"
      >
        <div
          className="css-1wfdxtz-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
          onClick={[Function]}
        />
      </div>
      <div
        className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
        role="tooltip"
        style={
          {
            "backgroundColor": "#2e3032",
            "zIndex": 1,
          }
        }
      >
        clipboard__copy
        <div
          className="react-tooltip-arrow styles-module_arrow__K0L3T"
          style={{}}
        />
      </div>
    </div>
  </div>
  <div
    className="results-list css-110siln"
    style={{}}
  />
</div>
`;

exports[`auto-complete-input renders correctly 1`] = `
<div
  className="css-18fst3t"
>
  <div
    className="css-1ezojgn"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="css-oqraj9"
    >
      <input
        autoComplete="off"
        className="css-pkbj54"
        defaultValue=""
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="results-list css-110siln"
    style={{}}
  />
</div>
`;
